<resources>
    <string name="app_name" translatable="false">Foco.Lite</string>

    <string name="action_music">Music</string>
    <string name="action_import">Import</string>
    <string name="action_sort">Sort</string>
    <string name="action_preview">Preview</string>
    <string name="action_edit">Edit</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_search_cancel">Cancel search</string>
    <string name="action_more">More</string>

    <string name="unit_word">word</string>
    <string name="unit_words">words</string>
    <string name="unit_day">day</string>
    <string name="unit_days">days</string>
    <string name="unit_hour">hour</string>
    <string name="unit_hours">hours</string>
    <string name="unit_minute">minute</string>
    <string name="unit_minutes">minutes</string>
    <string name="unit_second">second</string>
    <string name="unit_seconds">seconds</string>

    <!-- Font names -->
    <string name="font_libre_baskerville_regular" translatable="false">LibreBaskerville-Regular.ttf</string>
    <string name="font_libre_baskerville_bold" translatable="false">LibreBaskerville-Bold.ttf</string>

    <!-- Ask save dialog -->
    <string name="dialog_ask_save_title">Save document changes</string>
    <string name="dialog_ask_save_message">Do you want to save the changes before closing the document?</string>
    <string name="dialog_ask_save_save_button">Save</string>
    <string name="dialog_ask_save_close_button">Close</string>

    <!-- Delete dialog -->
    <string name="dialog_delete_document_title">Delete document</string>
    <string name="dialog_delete_documents_title">Delete documents</string>
    <string name="dialog_delete_document_message">Are you sure that you want to delete this document?</string>
    <string name="dialog_delete_documents_message">Are you sure that you want to delete these documents?</string>

    <!-- Sort dialog -->
    <string name="dialog_sort_title">Sort by</string>

    <!-- Create dialog -->
    <string name="dialog_create_doc_title">New document</string>
    <string name="dialog_create_doc_ok_button">Create</string>
    <string name="dialog_create_doc_hint">Title</string>

    <!-- Search dialog -->
    <string name="dialog_search_doc_title">Search document</string>
    <string name="dialog_search_doc_ok_button">Search</string>
    <string name="dialog_search_doc_hint">Title</string>

    <!-- Edit title dialog -->
    <string name="dialog_edit_doc_title">Edit document title</string>
    <string name="dialog_edit_doc_title_ok_button">Edit</string>
    <string name="dialog_edit_doc_title_hint">Title</string>

    <!-- Music dialog -->
    <string name="dialog_music_title">Music player</string>
    <string name="dialog_music_close_button">Close</string>
    <string name="dialog_music_play_description">Play</string>
    <string name="dialog_music_pause_description">Pause</string>
    <string name="dialog_music_stop_description">Stop</string>
    <string name="dialog_music_mute_description">Mute</string>
    <string name="dialog_music_loop_description">Loop</string>

    <!-- Edit cover dialog -->
    <string name="dialog_edit_doc_cover">Edit document cover</string>
    <string name="dialog_edit_doc_cover_ok_button">Edit</string>
    <string name="dialog_edit_doc_cover_color">Color</string>
    <string name="dialog_edit_doc_cover_color_select">Select color</string>
    <string name="dialog_edit_doc_cover_color_select_ok">Select</string>
    <string name="dialog_edit_doc_cover_image">Image</string>
    <string name="dialog_edit_doc_cover_image_select">Select image</string>
    <string name="dialog_edit_doc_cover_image_select_title">Select an image</string>
    <string name="dialog_edit_doc_cover_image_permissions_msg">Permission is required to select an image</string>
    <string name="dialog_edit_doc_cover_image_process_msg">Cannot create document image cover from selected image</string>
    <string name="dialog_edit_doc_cover_image_select_ok">Select</string>

    <!-- Main activity strings -->
    <string name="main_selection_bar_exit">Discard selection</string>
    <string name="main_selection_bar_delete">Delete</string>
    <string name="main_selection_bar_export">Export</string>
    <string name="main_selection_bar_favorite">Toggle favorite</string>
    <string name="main_selection_bar_edit_cover">Edit cover</string>
    <string name="main_selection_bar_edit_title">Edit title</string>

    <!-- Edit activity strings -->
    <string name="save_success_msg">Document saved successfully</string>
    <string name="preview_error_msg">The text has not yet been loaded, please wait a moment and try again</string>

    <string name="edit_toolbar_back">Back to main</string>
    <string name="edit_selection_bar_format_bold">Format bold</string>
    <string name="edit_selection_bar_format_italic">Format italic</string>
    <string name="edit_selection_bar_format_strikethrough">Format strikethrough</string>
    <string name="edit_selection_bar_format_quote">Format quote</string>
    <string name="edit_selection_bar_format_list_bulleted">Format list bulleted</string>
    <string name="edit_selection_bar_format_list_numbered">Format list numbered</string>
    <string name="edit_selection_bar_format_link">Format link</string>
    <string name="edit_selection_bar_format_image">Format image</string>
    <string name="edit_selection_bar_format_video">Format video</string>
    <string name="edit_selection_bar_format_header">Format header</string>
    <string name="edit_selection_bar_format_header_2">Format header 2</string>
    <string name="edit_selection_bar_format_header_3">Format header 3</string>

    <!-- Preferences strings -->
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_default" translatable="false">@string/pref_sort_title_key</string>
    <string name="pref_sort_title_label">Title</string>
    <string name="pref_sort_title_key" translatable="false">sort-title</string>
    <string name="pref_sort_edit_time_label">Last edition time</string>
    <string name="pref_sort_edit_time_key" translatable="false">sort-edit-time</string>
    <string name="pref_sort_words_label">Number of words</string>
    <string name="pref_sort_words_key" translatable="false">sort-words</string>

    <!-- Songs titles -->
    <string name="song_raindrops">Raindrops noise</string>
    <string name="song_fireplace">Fireplace</string>
    <string name="song_storm">Approaching storm</string>
    <string name="song_waves">Crashing waves</string>
    <string name="song_farm">Farm ambience</string>
    <string name="song_ocean_music">Ocean music</string>
    <string name="song_forest">Forest sounds</string>
    <string name="song_ocean_sounds">Ocean sounds</string>
    <string name="song_thunder">Thunder rumble sounds</string>
    <string name="song_water_stream">Water stream</string>
    <string name="song_metro">Metro inside sound</string>
    <string name="song_traffic">Traffic noise</string>

    <!-- Notification strings -->
    <string name="notification_text">Ambient music</string>
    <string name="notification_previous_action">Previous</string>
    <string name="notification_next_action">Next</string>
    <string name="notification_play_action">Play</string>
    <string name="notification_pause_action">Pause</string>
    <string name="notification_stop_action">Stop</string>

    <!-- Import/Export messages -->
    <string name="import_warning_metadata">The document was imported but there was an error reading foco metadata. This file was treated as an external text file.</string>
    <string name="import_error_reading">There was an error reading the document</string>
    <string name="import_error_format">Import document error: %s</string>
    <string name="import_success">The document was imported successfully</string>
    <string name="import_error_db">There was an error storing document</string>
    <string name="import_error_empty">The file is empty</string>
    <string name="file_error">There was an error selecting file</string>
    <string name="export_success">The document was exported successfully</string>
    <string name="export_error">Export document error: There was an error writing file</string>

    <!-- Sample document strings -->
    <string name="sample_doc_title">Sample document</string>
    <string name="sample_doc_text" translatable="false">
        <![CDATA[

            # Lorem Ipsum\n\n
            _Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..._\n\n

            Lorem ipsum dolor sit amet, consectetur adipiscing elit. **Nulla feugiat** eleifend dapibus.
            Aliquam lacinia luctus nunc et feugiat. In hac habitasse platea dictumst.
            Vivamus et velit lobortis, vestibulum ~~nulla~~ nec, commodo magna.\n\n

            ## Cras purus quam\n\n
            Maecenas pellentesque metus non eros fringilla elementum.
            Aenean iaculis lectus ut leo tincidunt, sed volutpat justo aliquet.
            Mauris malesuada aliquet nibh:\n
            - Aenean posuere\n
            - Hendrerit diam\n
            - Nec porttitor\n
            - Leo finibus ut\n\n

            ## Aenean congue\n\n
            Ut imperdiet suscipit sem in venenatis. Praesent et ullamcorper enim.\n
            [Aliquam fermentum](http://lipsum.com) commodo sem eget suscipit.\n\n

            ![Pellentesque ex metus](http://via.placeholder.com/350x150)\n\n

            Donec a ex congue, porttitor neque at, faucibus turpis. Donec accumsan odio dui,
            non egestas lacus gravida non. In faucibus arcu eu ultricies consequat.\n\n

            ## Youtube\n\n
            youtube.com/watch?v=**7X8II6J-6mU**\n\n
            @[youtube](7X8II6J-6mU)\n

        ]]>
    </string>

</resources>
