<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:title="@string/action_more"
        android:icon="@drawable/ic_more_menu"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/action_undo"
                android:orderInCategory="101"
                android:title="@string/action_undo"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_redo"
                android:orderInCategory="102"
                android:title="@string/action_redo"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_preview"
                android:orderInCategory="103"
                android:title="@string/action_preview"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_save"
                android:orderInCategory="104"
                android:title="@string/action_save"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_music"
                android:orderInCategory="200"
                android:title="@string/action_music"
                app:showAsAction="always" />
        </menu>
    </item>

</menu>