<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.nfdz.foco.ui.MainActivity">


    <item
        android:id="@+id/action_music"
        android:orderInCategory="100"
        android:title="@string/action_music"
        android:icon="@drawable/ic_music"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="200"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="300"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="200"-->
        <!--android:title="@string/action_settings"-->
        <!--android:icon="@drawable/ic_settings"-->
        <!--app:showAsAction="always" />-->
</menu>
