<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_music_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="@dimen/dialog_title_margin"/>

    <!-- A blank view to force the layout to be full-width -->
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="fill_horizontal" />

    <ProgressBar
        android:id="@+id/dialog_music_loading"
        android:layout_width="@dimen/loading_size"
        android:layout_height="@dimen/loading_size"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dialog_music_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:scrollbars="vertical"
        android:paddingLeft="@dimen/dialog_horizontal_padding"
        android:paddingRight="@dimen/dialog_horizontal_padding"
        android:paddingBottom="@dimen/dialog_vertical_padding"/>

    <LinearLayout
        android:id="@+id/dialog_music_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/music_dialog_control_button_vertical_margin"
        android:layout_marginBottom="@dimen/music_dialog_control_button_vertical_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dialog_music_play"
            android:layout_width="@dimen/music_dialog_control_button_size"
            android:layout_height="@dimen/music_dialog_control_button_size"
            android:layout_marginLeft="@dimen/music_dialog_control_button_horizontal_margin"
            android:layout_marginRight="@dimen/music_dialog_control_button_horizontal_margin"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:background="@drawable/selectable_item_selector_light"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_play"
            android:contentDescription="@string/dialog_music_play_description" />

        <ImageButton
            android:id="@+id/dialog_music_stop"
            android:layout_width="@dimen/music_dialog_control_button_size"
            android:layout_height="@dimen/music_dialog_control_button_size"
            android:layout_marginLeft="@dimen/music_dialog_control_button_horizontal_margin"
            android:layout_marginRight="@dimen/music_dialog_control_button_horizontal_margin"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:background="@drawable/selectable_item_selector_light"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_stop"
            android:contentDescription="@string/dialog_music_stop_description" />

        <ImageButton
            android:id="@+id/dialog_music_mute"
            android:layout_width="@dimen/music_dialog_control_button_size"
            android:layout_height="@dimen/music_dialog_control_button_size"
            android:layout_marginLeft="@dimen/music_dialog_control_button_horizontal_margin"
            android:layout_marginRight="@dimen/music_dialog_control_button_horizontal_margin"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:background="@drawable/selectable_item_selector_light"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_mute"
            android:contentDescription="@string/dialog_music_mute_description" />

        <ImageButton
            android:id="@+id/dialog_music_loop"
            android:layout_width="@dimen/music_dialog_control_button_size"
            android:layout_height="@dimen/music_dialog_control_button_size"
            android:layout_marginLeft="@dimen/music_dialog_control_button_horizontal_margin"
            android:layout_marginRight="@dimen/music_dialog_control_button_horizontal_margin"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:background="@drawable/selectable_item_selector_light"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_loop"
            android:contentDescription="@string/dialog_music_loop_description" />

    </LinearLayout>

    <Button
        android:id="@+id/dialog_music_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@color/colorAccent"
        android:background="@drawable/selectable_item_selector_light"
        android:text="@string/dialog_music_close_button"/>

</LinearLayout>